// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MacrosQuickReply /> should render the macros quick reply area 1`] = `
<div
  class="wrapper"
>
  <div
    class="info"
  >
    <i
      class="material-icons mr-2"
      id="macro-suggestion-info"
    >
      info_outline
    </i>
    Suggested macros
  </div>
  <div
    class="macros"
  >
    <span
      class="buttonWrapper"
    >
      <button
        aria-disabled="false"
        class="wrapper button fill secondary small"
        id="macro-quick-reply-0"
        type="button"
      >
        <span>
          macro-0
        </span>
      </button>
    </span>
    <span
      class="buttonWrapper"
    >
      <button
        aria-disabled="false"
        class="wrapper button fill secondary small"
        id="macro-quick-reply-1"
        type="button"
      >
        <span>
          macro-1
        </span>
      </button>
    </span>
    <span
      class="buttonWrapper"
    >
      <button
        aria-disabled="false"
        class="wrapper button fill secondary small"
        id="macro-quick-reply-2"
        type="button"
      >
        <span>
          macro-2
        </span>
      </button>
    </span>
  </div>
</div>
`;

exports[`<MacrosQuickReply /> should send an event to segment when applying a macro 1`] = `
[
  [
    "macros-quick-reply-sent",
    {
      "account_domain": "acme",
      "macro_id": 0,
      "macro_rank": 1,
      "ticket_id": 152,
      "user_id": 2,
    },
  ],
  [
    "macros-quick-reply-sent",
    {
      "account_domain": "acme",
      "macro_id": 1,
      "macro_rank": 2,
      "ticket_id": 152,
      "user_id": 2,
    },
  ],
  [
    "macros-quick-reply-sent",
    {
      "account_domain": "acme",
      "macro_id": 2,
      "macro_rank": 3,
      "ticket_id": 152,
      "user_id": 2,
    },
  ],
]
`;

exports[`<MacrosQuickReply /> should send an event to segment when hovering over a macro 1`] = `
[
  [
    "macros-quick-reply-get-details",
    {
      "account_domain": "acme",
      "macroId": 0,
      "macroRank": 1,
      "ticket_id": 152,
      "user_id": 2,
    },
  ],
]
`;

exports[`<MacrosQuickReply /> should send an event to segment when hovering the info icon 1`] = `
[
  [
    "macros-quick-reply-tooltip",
    {
      "account_domain": "acme",
      "ticket_id": 152,
      "user_id": 2,
    },
  ],
]
`;

exports[`<MacrosQuickReply /> should show the tooltip when hovering on the icon 1`] = `
<div
  class="tooltip"
>
  Macros are suggested based on your previous macro usage. Use macros to save time answering tickets.
</div>
`;
